--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 "IF YOU WANT TO CONQUER THE ANXIETY OF LIFE, LIVE IN THE MOMENT, LIVE IN THE BREATH."
                             </p>
                             <div class="hero-btn">
-                                <a class="btn" href="">Contact Us</a>
+                                <a class="btn" href="contact.html">Contact Us</a>
                             </div>
                         </div>
                     </div>
@@ -127,8 +127,8 @@
                             <p>
                                 You&#39;re used to feel in control, being the go-to person, getting things done, and
                                 succeed. You push yourself. You&#39;re busy. You&#39;re stressed out. Now feelings are
-                                bubbling up and they feel out of control.It feels like everything&#39;s falling apart - it might be your relationships or work or everything. Sometimes it&#39;s obvious what&#39;s wrong and sometimes you just know deep inside that something&#39;s off, but you can&#39;t put your finger on it. You feel like you&#39;ve lost yourself. You&#39;re paralyzed. You keep thinking and thinking, but you can&#39;t move, can&#39;t decide. You&#39;re overwhelmed.I know it&#39;s hard to reach out for help. Therapy is hard work, takes effort and commitment. <strong>But isn&#39;t it time for you to start showing up for yourself? This is your life, but you don&#39;t have to do it alone.</strong><br>
-                                Let&#39;s work together to:<br>
+                                bubbling up and they feel out of control.It feels like everything&#39;s falling apart - it might be your relationships or work or everything. Sometimes it&#39;s obvious what&#39;s wrong and sometimes you just know deep inside that something&#39;s off, but you can&#39;t put your finger on it. You feel like you&#39;ve lost yourself. You&#39;re paralyzed. You keep thinking and thinking, but you can&#39;t move, can&#39;t decide. You&#39;re overwhelmed.I know it&#39;s hard to reach out for help. Therapy is hard work, takes effort and commitment. <strong>But isn&#39;t it time for you to start showing up for yourself? This is your life, but you don&#39;t have to do it alone.</strong><br><br>
+                                <b>Let&#39;s work together to:<br></b>
 
 🅐 Reduce stress and anxiety<br>
 🅑 Let go of self-doubt and criticism<br>
@@ -316,7 +316,7 @@
                 <div class="container">
                     <div class="footer-info">
                         <img class="logo"  src="img/logo.png" >
-                        <h3>Navi mumbai, Maharashtra,
+                        <h3>Panvel,Navi mumbai, Maharashtra,
                             India.</h3>
                         <div class="footer-menu">
                             <p>+91 9643448705</p>
