--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                                 <!-- <a href="single.html" class="dropdown-item">Blog Detail</a> -->
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Resources</a>
+                        <a href="Resources.html" class="nav-item nav-link">Resources</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Get TO Know Me</h2>
+                        <h2>Get To Know Me</h2>
                     </div>
                     <div class="col-12">
                         <a href="">Home</a>
@@ -134,8 +134,8 @@ I will help you centre yourself so that you can make decisions, take charge of
 emotions, feel confident at work, and create meaningful relationships with people
 who accept and appreciate you. I can help you discover your true self potential and
 learn to accept your flaws and short comings. 
-It&#39;s from this place of self-love and acceptance that change is possible.
-You can let go of pleasing everyone else and feel good about being you!
+<b>It&#39;s from this place of self-love and acceptance that change is possible.
+    You can let go of pleasing everyone else and feel good about being you!</b>
                             </p>
                         </div>
                     </div>
@@ -152,7 +152,7 @@ You can let go of pleasing everyone else and feel good about being you!
                 <div class="container">
                     <div class="footer-info">
                         <img class="logo"  src="img/logo.png" >
-                        <h3>Navi mumbai, Maharashtra,
+                        <h3>Panvel,Navi mumbai, Maharashtra,
                             India.</h3>
                         <div class="footer-menu">
                             <p>+91 9643448705</p>
