--- a/contact.html
+++ b/contact.html
@@ -114,21 +114,21 @@
                         <i class="fa fa-map-marker-alt"></i>
                         <div class="contact-text">
                             <h2>Location</h2>
-                            <p>Mumbai,India</p>
+                            <p>Panvel, Navi mumbai, Maharashtra, India.</p>
                         </div>
                     </div>
                     <div class="col-md-4 contact-item wow zoomIn" data-wow-delay="0.4s">
                         <i class="fa fa-phone-alt"></i>
                         <div class="contact-text">
                             <h2>Phone</h2>
-                            <p>+012 345 67890</p>
+                            <p>+91 96434 48705</p>
                         </div>
                     </div>
                     <div class="col-md-4 contact-item wow zoomIn" data-wow-delay="0.6s">
                         <i class="far fa-envelope"></i>
                         <div class="contact-text">
                             <h2>Email</h2>
-                            <p>info@example.com</p>
+                            <p>Phoenixforcounselling@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -172,8 +172,7 @@
                 <div class="container">
                     <div class="footer-info">
                         <img class="logo"  src="img/logo.png" >
-                        <h3>Navi mumbai, Maharashtra,
-                            India.</h3>
+                        <h3>Panvel, Navi mumbai, Maharashtra, India.</h3>
                         <div class="footer-menu">
                             <p>+91 9643448705</p>
                             <p>Phoenixforcounselling@gmail.com</p>
