--- a/Resources.html
+++ b/Resources.html
@@ -167,9 +167,9 @@ improve your mood.<br>
  Keep a journal. <br>
  Manage your negative thoughts.<br>
  Get together with friends.<br>
- Seek support.<br>
-<p><b>
-Depression:</b><br>
+ Seek support.<br><br>
+<p><Strong>
+Depression:</strong><br>
 Depression is classified as a mood disorder. It may be described as feelings of
 loneliness, sadness, loss, or anger that interfere with a person’s everyday activities.
 It’s important to realize that feeling down at times is a normal part of life. But, if
@@ -787,8 +787,7 @@ Potential</a>
                 <div class="container">
                     <div class="footer-info">
                         <img class="logo"  src="img/logo.png" >
-                        <h3>Navi mumbai, Maharashtra,
-                            India.</h3>
+                        <h3>Navi mumbai, Maharashtra, India.</h3>
                         <div class="footer-menu">
                             <p>+91 9643448705</p>
                             <p>Phoenixforcounselling@gmail.com</p>
