--- a/blog.html
+++ b/blog.html
@@ -245,8 +245,7 @@ will happen next.</p>
                 <div class="container">
                     <div class="footer-info">
                         <img class="logo"  src="img/logo.png" >
-                        <h3>Navi mumbai, Maharashtra,
-                            India.</h3>
+                        <h3>Panvel, Navi mumbai, Maharashtra, India.</h3>
                         <div class="footer-menu">
                             <p>+91 9643448705</p>
                             <p>Phoenixforcounselling@gmail.com</p>
