--- a/service.html
+++ b/service.html
@@ -207,8 +207,7 @@ INR 800/ session (chat message)<br>
                 <div class="container">
                     <div class="footer-info">
                         <img class="logo"  src="img/logo.png" >
-                        <h3>Navi mumbai, Maharashtra,
-                            India.</h3>
+                        <h3>Panvel,Navi mumbai, Maharashtra, India.</h3>
                         <div class="footer-menu">
                             <p>+91 9643448705</p>
                             <p>Phoenixforcounselling@gmail.com</p>
