--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                             </div>
                         </div>
                         <a href="Resources.html" class="nav-item nav-link">Resources</a>
+                        <a href="Appaintment form.html" class="nav-item nav-link">Appointment</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
