--- a/service.html
+++ b/service.html
@@ -77,6 +77,7 @@
                             </div>
                         </div>
                         <a href="Resources.html" class="nav-item nav-link">Resources</a>
+                        <a href="Appaintment form.html" class="nav-item nav-link">Appointment</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
@@ -194,7 +195,7 @@
 INR 800/ session (chat message)<br>
 🅒 Languages- English, Hindi, Tamil, Telugu <br>
                     </p>
-                    <a class="btn" href="contact.html">Get Appointment </a>
+                    <a class="btn" href="Appaintment form.html">Get Appointment </a>
                 </div>
             </div>
         </div>
