--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -43,7 +43,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group">
-										<span class="form-label">Check In</span>
+										<span class="form-label">Date</span>
 										<input class="form-control" type="date" required>
 									</div>
 								</div>
