--- a/Adjusting to the new normal.html
+++ b/Adjusting to the new normal.html
@@ -88,8 +88,8 @@
                         <h2>Detail Page</h2>
                     </div>
                     <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">Detail Page</a>
+                        <!-- <a href="">Home</a>
+                        <a href="">Detail Page</a> -->
                     </div>
                 </div>
             </div>
