--- a/about.html
+++ b/about.html
@@ -92,8 +92,8 @@
                         <h2>Get To Know Me</h2>
                     </div>
                     <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">Get TO Know Me</a>
+                        <!-- <a href="">Home</a>
+                        <a href="">Get TO Know Me</a> -->
                     </div>
                 </div>
             </div>
@@ -135,8 +135,8 @@ I will help you centre yourself so that you can make decisions, take charge of
 emotions, feel confident at work, and create meaningful relationships with people
 who accept and appreciate you. I can help you discover your true self potential and
 learn to accept your flaws and short comings. 
-<i><b>It&#39;s from this place of self-love and acceptance that change is possible.
-    You can let go of pleasing everyone else and feel good about being you!</b></i>
+<b>It&#39;s from this place of self-love and acceptance that change is possible.
+    You can let go of pleasing everyone else and feel good about being you!</b>
                             </p>
                         </div>
                     </div>
