--- a/blog.html
+++ b/blog.html
@@ -90,8 +90,8 @@
                         <h2>Blog</h2>
                     </div>
                     <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">Blog</a>
+                        <!-- <a href="">Home</a>
+                        <a href="">Blog</a> -->
                     </div>
                 </div>
             </div>
@@ -115,9 +115,9 @@
                             <div class="blog-text">
                                 <h2>Adjusting to the new normal</h2>
                                 <div class="blog-meta">
-                                    <p><i class="far fa-list-alt"></i>Mind Fitness</p>
-                                    <p><i class="far fa-calendar-alt"></i>20-sep-2021</p>
-                                    <p><i class="far fa-comments"></i>5</p>
+                                    <!-- <p><i class="far fa-list-alt"></i>Mind Fitness</p> -->
+                                    <p><i class="far fa-calendar-alt"></i>10-May-2020</p>
+                                    <!-- <p><i class="far fa-comments"></i>5</p> -->
                                 </div>
                                 <p>
                                     We human beings are constantly in combat, at war to escape the fact of being so
@@ -136,9 +136,9 @@ limited, limited by so many circumstances we cannot control.</p>
 
 Potential</h2>
                                 <div class="blog-meta">
-                                    <p><i class="far fa-list-alt"></i>Mind Fitness</p>
-                                    <p><i class="far fa-calendar-alt"></i>20-sep-2021</p>
-                                    <p><i class="far fa-comments"></i>5</p>
+                                    <!-- <p><i class="far fa-list-alt"></i>Mind Fitness</p> -->
+                                    <p><i class="far fa-calendar-alt"></i>12-sep-2020</p>
+                                    <!-- <p><i class="far fa-comments"></i>5</p> -->
                                 </div>
                                 <p>
                                     Learning is a continuous process in our entire life. Do you know that we start learning from our mother’s womb? Interesting, isn’t it? A study s</p>
@@ -154,9 +154,9 @@ Potential</h2>
                             <div class="blog-text">
                                 <h2>Mental Health</h2>
                                 <div class="blog-meta">
-                                    <p><i class="far fa-list-alt"></i>Mind Fitness</p>
-                                    <p><i class="far fa-calendar-alt"></i>20-Sep-2021</p>
-                                    <p><i class="far fa-comments"></i>5</p>
+                                    <!-- <p><i class="far fa-list-alt"></i>Mind Fitness</p> -->
+                                    <p><i class="far fa-calendar-alt"></i>04-Jan-2021</p>
+                                    <!-- <p><i class="far fa-comments"></i>5</p> -->
                                 </div>
                                 <p>
                                     &#39;The Neuroscientist Who Lost Her Mind: My Tale of Madness and Recovery&#39;.
@@ -174,9 +174,9 @@ Potential</h2>
                             <div class="blog-text">
                                 <h2>COVID-19 and Mental Health</h2>
                                 <div class="blog-meta">
-                                    <p><i class="far fa-list-alt"></i>Mind Fitness</p>
-                                    <p><i class="far fa-calendar-alt"></i>20-Sep-2021</p>
-                                    <p><i class="far fa-comments"></i>5</p>
+                                    <!-- <p><i class="far fa-list-alt"></i>Mind Fitness</p> -->
+                                    <p><i class="far fa-calendar-alt"></i>18-May-2020</p>
+                                    <!-- <p><i class="far fa-comments"></i>5</p> -->
                                 </div>
                                 <p>
                                     Corona virus disease 2019 (COVID-19) has turned everyone’s lives upside down as what
