--- a/service.html
+++ b/service.html
@@ -91,11 +91,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Service</h2>
+                        <h2>Services</h2>
                     </div>
                     <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">Service</a>
+                        <!-- <a href="">Home</a>
+                        <a href="">Service</a> -->
                     </div>
                 </div>
             </div>
@@ -119,18 +119,22 @@
                             <h3>Counseling</h3>
                             <p>
                               Counseling involves helping people make needed changes in ways of thinking, feeling, and behaving, and is a goal-based collaborative process, involving a non-judgment 
-                            </p>
+                            <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                         </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+
+                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-icon">
                                 <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/Psychotherapy.png"></i>
                             </div>
                             <h3>Psychotherapy</h3>
                             <p>
-                               Psychotherapy, or talk therapy, is a way to help people with a broad variety of mental illnesses and emotional difficulties. Psychotherapy can help eliminate or control troubling symptoms so a person can function better and can increase well-being and healing. 
-                            </p>
+                               Psychotherapy, or talk therapy, is a way to help people with a broad variety of mental illnesses and emotional difficulties. Psychotherapy can help eliminate or control troubling symptoms so a person can function better and can increase well-being and healing.</p>
+                               <p> 
+                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                            
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
@@ -141,6 +145,7 @@
                             <h3>Hypnotherapy</h3>
                             <p>
                                Hypnotherapy, also referred to as guided hypnosis, is a form of psychotherapy that uses relaxation, extreme concentration, and intense attention to achieve a heightened state of consciousness or mindfulness. In other words, it places the individual into a “trance” or altered state of awareness.
+                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
@@ -152,6 +157,7 @@
                             <h3>Marital and Pre-marital Counseling</h3>
                             <p>
                                 Marital and Pre-marital counseling is a type of therapy that helps couples prepare for marriage. Premarital counseling can help ensure that you and your partner have a strong, healthy relationship — giving you a better chance for a stable and satisfying marriage.
+                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
@@ -163,6 +169,7 @@
                             <h3>Adolescent counseling</h3>
                             <p>
                               Adolescent counselling is counselling aimed at young people to help them make sense of their feelings, behaviors and thoughts and entails the use of unique techniques that draw out the expressive nature of a young person like art therapy or more traditional approaches like talking therapy. This form of counselling is important in helping guiding kids transitioning into adulthood and to understand themselves better.
+                              <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
@@ -174,6 +181,7 @@
                             <h3>Family and Relationship counseling</h3>
                             <p>
                                Well, marriage counseling, also called couples therapy and marriage and family therapy, is a type of psychotherapy that focuses on improving your communication and conflict-resolution skills.
+                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
                             </p>
                         </div>
                     </div>
