--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -38,7 +38,7 @@
 						<div class="booking-bg"></div>
 						<form>
 							<div class="form-header">
-								<h2>Make your reservation</h2>
+								<h2>Make your appointment</h2>
 							</div>
 							<div class="row">
 								<div class="col-md-6">
