--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,8 @@
             <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="contact-form">
                     <div id="success"></div>
-                    <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                    <form name="sentMessage" id="contactForm" novalidate="novalidate" action="https://formspree.io/f/moqyrbrn"
+  method="POST">
                         <div class="control-group">
                             <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
                             <p class="help-block text-danger"></p>
