--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -36,7 +36,8 @@
 				<div class="row">
 					<div class="booking-form">
 						<div class="booking-bg"></div>
-						<form>
+						<form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
+  action="https://script.google.com/macros/s/AKfycbxo9Q3FmPrjrdYnF05n6hVOiKONLbFxu-csykXhEaDxjVuH0dMK3Ihpku7Gnkkziym3ag/exec">
 							<div class="form-header">
 								<h2>Make your appointment</h2>
 							</div>
@@ -44,57 +45,42 @@
 								<div class="col-md-6">
 									<div class="form-group">
 										<span class="form-label">Date</span>
-										<input class="form-control" type="date" required>
+										<input class="form-control" type="date" name="date" id="date" required>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
 										<span class="form-label">Time</span>
-										<input class="form-control" type="Name" placeholder="Enter Time">
+										<input class="form-control" type="Name" placeholder="Enter Time" name="time" id="time">
 									</div>
 								</div>
 							</div>
-							<!-- <div class="row">
-								<div class="col-md-6">
-									<div class="form-group">
-										<span class="form-label">Adults</span>
-										<select class="form-control">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-										</select>
-										<span class="select-arrow"></span>
-									</div>
-								</div> -->
-								<!-- <div class="col-md-6">
-									<div class="form-group">
-										<span class="form-label">Children</span>
-										<select class="form-control">
-											<option>0</option>
-											<option>1</option>
-											<option>2</option>
-										</select>
-										<span class="select-arrow"></span> -->
-									<!-- </div>
-								</div>
-							</div> -->
 							<div class="form-group">
 								<!-- <span class="form-label">Email<br></span> -->
-								<input class="form-control" type="email" placeholder="Enter your email">
+								<input class="form-control" type="email" placeholder="Enter your email" name="email" id="email" >
 							</div>
 							<div class="form-group">
 								<span class="form-label">Phone</span>
-								<input class="form-control" type="tel" placeholder="Enter your phone number">
+								<input class="form-control" type="tel" placeholder="Enter your phone number" name="phone" id="phone">
 							</div>
 							<div class="form-btn">
 								<button class="submit-btn">Book Now</button>
 							</div>
+							 <!-- Thankyou Message People See when they submit the form: -->
+    <div class="thankyou_message" style="display:none;">
+      <h2>Thanks for contacting us!
+        We will get back to you soon!</h2>
+    </div>
 						</form>
+						
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+	 <!-- Submit the Form to Google Using "AJAX" -->
+  <script data-cfasync="false" type="text/javascript"
+  src="form-submission-handler.js"></script>
+</body>
 
 </html>
