--- a/index.html
+++ b/index.html
@@ -332,11 +332,11 @@
                             India.</h3>
                         <div class="footer-menu">
                             <p>+91 9643448705</p>
-                            <p>Phoenixforcounselling@gmail.com</p>
+                            <p>phoenixforcounselling@gmail.com</p>
                         </div>
                         <div class="footer-social">
-                            <a href="https://www.instagram.com/uma_maheswari_phoenix?r=nametag"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.facebook.com/Mrs-Uma-Maheswari-Psychological-Counselor-and-Therapist-112902650512713/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/Mrs-Uma-Maheswari-Psychological-Counselor-and-Therapist-112902650512713/"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/uma_maheswari_phoenix?r=nametag"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/uma-maheswari-71356b52/"><i class="fab fa-linkedin-in"></i></a>
 
                         </div>
