--- a/about.html
+++ b/about.html
@@ -135,8 +135,8 @@ I will help you centre yourself so that you can make decisions, take charge of
 emotions, feel confident at work, and create meaningful relationships with people
 who accept and appreciate you. I can help you discover your true self potential and
 learn to accept your flaws and short comings. 
-<b>It&#39;s from this place of self-love and acceptance that change is possible.
-    You can let go of pleasing everyone else and feel good about being you!</b>
+It&#39;s from this place of self-love and acceptance that change is possible.
+    <b>You can let go of pleasing everyone else and feel good about being you!</b>
                             </p>
                         </div>
                     </div>
