--- a/Adjusting to the new normal.html
+++ b/Adjusting to the new normal.html
@@ -344,7 +344,8 @@ help you on your journey of healing and self-discovery.
                         </div> -->
                         <div class="comment-form wow fadeInUp">
                             <h2>Contact Us for Appointment</h2>
-                            <form>
+
+                            <!-- <form>
                                 <div class="form-group">
                                     <label for="name">Name *</label>
                                     <input type="text" class="form-control" id="name">
@@ -363,9 +364,10 @@ help you on your journey of healing and self-discovery.
                                     <textarea id="message" cols="30" rows="5" class="form-control"></textarea>
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="Post Comment" class="btn">
-                                </div>
-                            </form>
+                                    <input type="submit" value="Post Comment" class="btn"> -->
+                                    <p> 
+                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                                </div>                           
                         </div>
                     </div>
 
