--- a/Learn to Unlearn and Unleash your.html
+++ b/Learn to Unlearn and Unleash your.html
@@ -340,7 +340,7 @@ help you on your journey of healing and self-discovery.
                         </div> -->
                         <div class="comment-form wow fadeInUp">
                             <h2>Contact Us for Appointment</h2>
-                            <form>
+                            <!-- <form>
                                 <div class="form-group">
                                     <label for="name">Name *</label>
                                     <input type="text" class="form-control" id="name">
@@ -361,7 +361,9 @@ help you on your journey of healing and self-discovery.
                                 <div class="form-group">
                                     <input type="submit" value="Post Comment" class="btn">
                                 </div>
-                            </form>
+                            </form> -->
+                            <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                                </div>
                         </div>
                     </div>
 
@@ -719,11 +721,11 @@ help you on your journey of healing and self-discovery.
                             India.</h3>
                         <div class="footer-menu">
                             <p>+91 9643448705</p>
-                            <p>Phoenixforcounselling@gmail.com</p>
+                            <p>phoenixforcounselling@gmail.com</p>
                         </div>
                         <div class="footer-social">
-                            <a href="https://www.instagram.com/uma_maheswari_phoenix?r=nametag"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.facebook.com/Mrs-Uma-Maheswari-Psychological-Counselor-and-Therapist-112902650512713/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/Mrs-Uma-Maheswari-Psychological-Counselor-and-Therapist-112902650512713/"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/uma_maheswari_phoenix?r=nametag"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/uma-maheswari-71356b52/"><i class="fab fa-linkedin-in"></i></a>
 
                         </div>
