--- a/Resources.html
+++ b/Resources.html
@@ -411,7 +411,7 @@ help you on your journey of healing and self-discovery.
                         </div> -->
                         <div class="comment-form wow fadeInUp">
                             <h2>Contact Us for Appointment</h2>
-                            <form>
+                            <!-- <form>
                                 <div class="form-group">
                                     <label for="name">Name *</label>
                                     <input type="text" class="form-control" id="name">
@@ -432,7 +432,9 @@ help you on your journey of healing and self-discovery.
                                 <div class="form-group">
                                     <input type="submit" value="Post Comment" class="btn">
                                 </div>
-                            </form>
+                            </form> -->
+                            <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                                </div>
                         </div>
                     </div>
 
@@ -441,8 +443,8 @@ help you on your journey of healing and self-discovery.
                             <div class="sidebar-widget wow fadeInUp">
                                 <div class="search-widget">
                                     <form>
-                                        <input class="form-control" type="text" placeholder="Search Keyword">
-                                        <button class="btn"><i class="fa fa-search"></i></button>
+                                        <!-- <input class="form-control" type="text" placeholder="Search Keyword">
+                                        <button class="btn"><i class="fa fa-search"></i></button> -->
                                     </form>
                                 </div>
                             </div>
@@ -791,11 +793,11 @@ Potential</a>
                         <h3>Panvel,Navi mumbai, Maharashtra, India.</h3>
                         <div class="footer-menu">
                             <p>+91 9643448705</p>
-                            <p>Phoenixforcounselling@gmail.com</p>
+                            <p>phoenixforcounselling@gmail.com</p>
                         </div>
                         <div class="footer-social">
-                            <a href="https://www.instagram.com/uma_maheswari_phoenix?r=nametag"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.facebook.com/Mrs-Uma-Maheswari-Psychological-Counselor-and-Therapist-112902650512713/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/Mrs-Uma-Maheswari-Psychological-Counselor-and-Therapist-112902650512713/"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/uma_maheswari_phoenix?r=nametag"><i class="fab fa-instagram"></i></a>
                             <a href="https://www.linkedin.com/in/uma-maheswari-71356b52/"><i class="fab fa-linkedin-in"></i></a>
 
                         </div>
