--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                             <div class="dropdown-menu">
-                                <a href="blog.html" class="dropdown-item">Blog grid</a>
+                                <a href="Adjusting to the new normal.html" class="dropdown-item">Adjusting to the new normal</a>
+                                <a href="Learn to Unlearn and Unleash your.html" class="dropdown-item">Learn to Unlearn and Unleash your</a>
+                                <a href="COVID-19 and Mental Health.html" class="dropdown-item">COVID-19 and Mental Health</a>
+                                <a href="Mental Health.html" class="dropdown-item">Basics of Mental Health</a>
                                 <!-- <a href="single.html" class="dropdown-item">Blog Detail</a> -->
                             </div>
                         </div>
