Update Adjusting to the new normal.html

--- a/Adjusting to the new normal.html
+++ b/Adjusting to the new normal.html
@@ -65,10 +65,12 @@
                         <a href="about.html" class="nav-item nav-link ">Get to know me</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
+                           <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                             <div class="dropdown-menu">
-                                <a href="blog.html" class="dropdown-item">Blog grid</a>
-                                </div>
+                                <a href="Adjusting to the new normal.html" class="dropdown-item">Adjusting to the new normal</a>
+                                <a href="Learn to Unlearn and Unleash your.html" class="dropdown-item">Learn to Unlearn and Unleash your</a>
+                                <a href="COVID-19 and Mental Health.html" class="dropdown-item">COVID-19 and Mental Health</a>
+                                <a href="Mental Health.html" class="dropdown-item">Basics of Mental Health</a>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Resources</a>
                         <a href="Appaintment form.html" class="nav-item nav-link">Appointment</a>
