--- a/contact.html
+++ b/contact.html
@@ -95,8 +95,8 @@
                 <h2>Contact</h2>
             </div>
             <div class="col-12">
-                <a href="">Home</a>
-                <a href="">Contact</a>
+<!--                 <a href="">Home</a>
+                <a href="">Contact</a> -->
             </div>
         </div>
     </div>
