--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link ">Get to know me</a>
-                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="service.html" class="nav-item nav-link">Services</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                             <div class="dropdown-menu">
                                 <a href="Adjusting to the new normal.html" class="dropdown-item">Adjusting to the new normal</a>
-                                <a href="Learn to Unlearn and Unleash your.html" class="dropdown-item">Learn to Unlearn and Unleash your</a>
+                                <a href="Learn to Unlearn and Unleash your.html" class="dropdown-item">Learn to Unlearn and Unleash your
+
+Potential</a>
                                 <a href="COVID-19 and Mental Health.html" class="dropdown-item">COVID-19 and Mental Health</a>
                                 <a href="Mental Health.html" class="dropdown-item">Basics of Mental Health</a>
                                 <!-- <a href="single.html" class="dropdown-item">Blog Detail</a> -->
@@ -272,8 +274,8 @@
         <div class="testimonial wow fadeInUp" data-wow-delay="0.1s">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Testimonial</p>
-                    <h2>Our Client Say!</h2>
+                    <p>Testimonials</p>
+                    <h2>What Our Client Say!</h2>
                 </div>
                 <div class="owl-carousel testimonials-carousel">
                     <div class="testimonial-item">
