--- a/Adjusting to the new normal.html
+++ b/Adjusting to the new normal.html
@@ -63,7 +63,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link ">Get to know me</a>
-                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="service.html" class="nav-item nav-link">Services</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                             <div class="dropdown-menu">
