--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             <div class="navbar-nav ml-auto">
                 <a href="index.html" class="nav-item nav-link ">Home</a>
                 <a href="about.html" class="nav-item nav-link ">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
+                <a href="service.html" class="nav-item nav-link">Services</a>
                 <div class="nav-item dropdown">
                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                             <div class="dropdown-menu">
