--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -51,7 +51,7 @@
 								<div class="col-md-6">
 									<div class="form-group">
 										<span class="form-label">Time</span>
-										<input class="form-control" type="Name" placeholder="Enter Time" name="time" id="time">
+										<input class="form-control" type="time" placeholder="Enter Time" name="time" id="time">
 									</div>
 								</div>
 							</div>
