New Service added

--- a/service.html
+++ b/service.html
@@ -190,6 +190,39 @@ Potential</a>
                             </p>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="service-item">
+                            <div class="service-icon">
+                                <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/MaritalandPre-maritalCounseling.png"></i>
+                            </div>
+                            <h3>Grief And Loss</h3>
+                            <p>
+                                <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="service-item">
+                            <div class="service-icon">
+                                <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/Adolescentcounseling.png"></i>
+                            </div>
+                            <h3>Counseling for behavioural and emotional disorders</h3>
+                            <p>
+                              <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="1s">
+                        <div class="service-item">
+                            <div class="service-icon">
+                                <i class=""><img  style="margin-bottom: 10px;" width="50px" height="50px" src="./img/FamilyandRelationshipcounseling.png"></i>
+                            </div>
+                            <h3>Counseling for adjustment issues</h3>
+                            <p>
+                               <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
