--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Potential</a>
             <div class="container">
                 <div class="section-header text-center">
                     <p>Testimonials</p>
-                    <h2>What Our Client Say!</h2>
+                    <h2>What Our Clients Say!</h2>
                 </div>
                 <div class="owl-carousel testimonials-carousel">
                     <div class="testimonial-item">
