--- a/service.html
+++ b/service.html
@@ -70,7 +70,7 @@
                         <a href="about.html" class="nav-item nav-link ">Get to know me</a>
                         <a href="service.html" class="nav-item nav-link active">Services</a>
                          <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blogs</a>
                             <div class="dropdown-menu">
                                 <a href="Adjusting to the new normal.html" class="dropdown-item">Adjusting to the new normal</a>
                                 <a href="Learn to Unlearn and Unleash your.html" class="dropdown-item">Learn to Unlearn and Unleash your
