--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -45,7 +45,7 @@
 								<div class="col-md-6">
 									<div class="form-group">
 										<span class="form-label">Date</span>
-										<input class="form-control" type="date" name="date" id="date" required>
+										<input class="form-control" type="datetime-local" name="date" id="date" required>
 									</div>
 								</div>
 								<div class="col-md-6">
