--- a/Appaintment form.html
+++ b/Appaintment form.html
@@ -45,13 +45,13 @@
 								<div class="col-md-6">
 									<div class="form-group">
 										<span class="form-label">Date</span>
-										<input class="form-control" type="datetime-local" name="date" id="date" required>
+										<input class="form-control" type="date" name="date" id="date" required>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
 										<span class="form-label">Time</span>
-										<input class="form-control" type="time" placeholder="Enter Time" name="time" id="time">
+										<input class="form-control" type="time" placeholder="Enter Time" name="time" id="Period">
 									</div>
 								</div>
 							</div>
